# Super_Mario_Plus

./: .cursorrules  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  structure.md
.ai/rules/code-deletion-guard/: SKILL.md
.ai/rules/oop-enforcer/: SKILL.md
.ai/rules/pattern-checker/: SKILL.md
.ai/rules/pedagogical-explainer/: SKILL.md
.ai/rules/structure-manager/: SKILL.md
.ai/rules/structure-updater/: SKILL.md
.ai/rules/supermarioplus-oop-rules/: SKILL.md
build_mingw/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
include/: Background.h  CameraManager.h  Cloud.h  Command.h  Decoration.h  Game.h  GameManager.h  GameState.h  HUD.h  IntroState.h  Menu.h  Platform.h  Player.h  SettingState.h  StateManager.h  SuperMarioPlus.h  UIComponent.h  World.h
src/: Background.cpp  CameraManager.cpp  Cloud.cpp  Decoration.cpp  Game.cpp  GameManager.cpp  GameState.cpp  HUD.cpp  IntroState.cpp  Menu.cpp  Platform.cpp  Player.cpp  SettingState.cpp  StateManager.cpp  SuperMarioPlus.cpp  UIComponent.cpp  World.cpp  main.cpp
workflow/: PLAN.md  README.md  application.puml  entity.puml  infrastructure.puml  system.puml  world.puml
